<resources>
    <string name="app_name">Gastos de viagem</string>
    <string name="distancia">Distância</string>
    <string name="total_de_quilometros">Total de quilometros</string>
    <string name="preco">Preço</string>
    <string name="preco_por_litro">Preço por litro</string>
    <string name="autonomia">Autonomia</string>
    <string name="km_por_litro">Km por litro</string>
    <string name="gasto_total">Seu gasto total será de:</string>
    <string name="resultadoTotal">R$ 0</string>
    <string name="calcular_button">calcular</string>
</resources>