<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/distanciaTotal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/distancia"
        android:layout_marginTop="32dp"
        android:inputType="number" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/total_de_quilometros"
        android:gravity="center"/>

    <EditText
        android:id="@+id/precoR"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/preco"
        android:layout_marginTop="32dp"
        android:inputType="numberDecimal"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/preco_por_litro"
        android:gravity="center"/>

    <EditText
        android:id="@+id/autonomiaTotal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/autonomia"
        android:layout_marginTop="32dp"
        android:inputType="numberDecimal"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/km_por_litro"
        android:gravity="center"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/gasto_total"
        android:layout_marginTop="80dp"
        android:textSize="22dp"
        android:textAllCaps="true"/>

    <TextView
        android:id="@+id/totalResultado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="40sp"
        android:text="@string/resultadoTotal"
        android:layout_marginTop="10dp"
        android:textColor="@color/darBlue"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonCalcular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/calcular_button"
        android:layout_marginTop="10dp"
        android:padding="20dp"
        android:textAllCaps="true"
        android:textSize="25sp"
        android:textColor="@color/white"
        android:background="@color/lightGreen"/>

</LinearLayout>